feat: new parameters to fetchAllGroups
